# rover_sitl_gazebo_plugin

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
launch/: rover_worlds.launch
rover_plugin/: CMakeLists.txt  package.xml
rover_plugin/launch/: rover_test.launch
rover_plugin/src/: RoverPlugin.cc  RoverPlugin.hh
rover_sitl_gazebo_plugin/: CMakeLists.txt  package.xml
rover_sitl_gazebo_plugin/launch/: rover_worlds.launch
rover_sitl_gazebo_plugin/models/: README.md
rover_sitl_gazebo_plugin/models/rover/: model.config  model.sdf
rover_sitl_gazebo_plugin/src/: SocketAPM.cc  SocketAPM.hh  VehiclePlugin.cc  VehiclePlugin.hh  rover_sitl_gazebo_plugin.cc  rover_sitl_gazebo_plugin.hh  vehicle_plugin_apm_side.cc  vehicle_plugin_gazebo_side.cc  vehicle_plugin_ros_side.cc
rover_sitl_gazebo_plugin/tests/: main.cpp  testSocketAPM.cpp
rover_sitl_gazebo_plugin/tests/rover_test/: SocketAPM.cc  compile.sh  main.cpp
rover_sitl_gazebo_plugin/tests/rover_test/rover_test/: rover_test.pro
rover_sitl_gazebo_plugin/worlds/: rover.world
scripts/: test.py
src/: SocketAPM.cc  VehiclePlugin.cc  VehiclePlugin.hh  vehicle_plugin_apm_side.cc  vehicle_plugin_ros_side.cc
worlds/: rover.world
